--- a/stylesheets/sass/base/_variables.sass
+++ b/stylesheets/sass/base/_variables.sass
@@ -37,7 +37,7 @@ $basecamp-whiter-scallopbottom: "../images/background/basecamp-whiter_scallop3.p
 $header-bg: $darker
 $nav-bg: $darker
 $section-bg: $basecamp-whiter
-$footer-bg: $lighter
+$footer-bg: $darker
 $social-bg: $darker
 $link-hover: $beige
 
