--- a/stylesheets/sass/modules/_footer.sass
+++ b/stylesheets/sass/modules/_footer.sass
@@ -2,13 +2,13 @@
 
 footer
     text-align: center
-    background-color: $social-bg
+    background-color: $footer-bg
 
     .site-copy-wrap
         padding: 0
 
 .social-media
-    padding: 1rem inherit
+    padding-top: 3rem
     background-color: $social-bg
     font-size: 1.5rem
     
@@ -18,14 +18,15 @@ footer
 .site-map
     padding:
         bottom: 5%
-    +bold-caps(1.1rem, 2, 0.025rem, 1rem)
+    +bold-caps(1.3rem, 1.7, 0.15rem, 0)
 
     li
         display: block
+        padding-bottom: 0.5rem
 
 .copyright
     padding:
         bottom: 1.5rem
     p
-        font-size: 1.0rem
+        font-size: 1.1rem
         color: $orange
