--- a/stylesheets/sass/modules/_header.sass
+++ b/stylesheets/sass/modules/_header.sass
@@ -5,6 +5,9 @@ header
     width: 100%
     overflow: overlay
 
+    .container
+        padding-bottom: 4%
+
 .title
     float: left
     width: 80%
